# minecraft-mcp

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml  run_agent_live.py  run_chat_agent.py  run_demo_attack_player.py  run_demo_autonomous.py  run_demo_break.py  run_demo_creative.py  run_demo_error_recovery.py  run_demo_freeform_build.py  run_demo_full_agent.py  run_demo_memory.py  run_demo_move.py  run_demo_planning.py  run_demo_skill_library.py  run_demo_smelt.py  run_join_game.py  run_live_chat.py  run_tool.py
.minecraft_mcp_data/: plans.json  session_history.json  skills.json  world_memory.json
bridge/: package-lock.json  package.json  presets.mjs  server.mjs
docs/: research.md
src/minecraft_dedalus_mcp/: __init__.py  agent_demo.py  bridge_client.py  constants.py  event_log.py  minecraft_knowledge.py  models.py  playbook.py  run_sim.py  server.py
src/minecraft_dedalus_mcp/agent/: __init__.py  autonomous.py  cancellation.py  chat_classifier.py
src/minecraft_dedalus_mcp/memory/: __init__.py  session.py  world_memory.py
src/minecraft_dedalus_mcp/modes/: __init__.py  base.py  creative.py  survival.py
src/minecraft_dedalus_mcp/planning/: __init__.py  blueprints.py  planner.py
src/minecraft_dedalus_mcp/recovery/: __init__.py  retry.py
src/minecraft_dedalus_mcp/skills/: __init__.py  store.py
tests/: test_mcp_e2e.py  test_playbook.py  test_run_sim.py
